<resources>
    <string name="app_name">My Application</string>
    <string name="titlelbl">Bienvenido,!</string>
    <string name="lblPasos">Pasos Diarios</string>
    <string name="lblCalorias">Calorías Consumidas</string>
    <string name="lblPeso">Peso Ideal</string>
    <string name="lblHorasSueño">Horas de Sueño</string>
    <string name="lblCaloria1">Hora del dia (12 am - 7 am)</string>
    <string name="lblCaloria2">Hora del dia (7 am - 12 pm)</string>
    <string name="lblCaloria3">Hora del dia (12 pm - 6 pm)</string>
    <string name="lblCaloria4">Hora del dia (6 pm - 12 am)</string>
    <string name="txtCantidadCalorias1">Calorias consumidas:</string>
    <string name="txtCantidadCalorias2">Calorias consumidas:</string>
    <string name="txtCantidadCalorias3">Calorias consumidas:</string>
    <string name="txtCantidadCalorias4">Calorias consumidas:</string>
    <string name="txtMostrarCalorias">Resultados de las calorias::</string>
    <string name="txtMapas">Ver Mapa</string>
    <string name="btnVer">Ver</string>
    <string name="btnCalcular">Calcular</string>
    <string name="btnDetalles">Detalles</string>
    <string name="lblPromedioDiario">Promedio Diario:</string>
    <string name="lblMision">Misión del día:</string>
    <string name="lblRacha">Racha:</string>
    <string name="lblMedallas">Medallas:</string>
    <string name="btnConfig">Configuracion</string>
    <string name="btninicio">Inicio</string>
    <string name="btnMisiones">Ver Misiones</string>
    <string name="PasosDiarioslbl">Pasos Diarios</string>
    <string name="consent_dialog_title">Consentimiento de Datos de Salud</string>
    <string name="consent_dialog_message">Para mostrar tus datos de actividad física y ayudarte a alcanzar tus metas, necesitamos tu permiso para acceder a Health Connect. Puedes revisar nuestra Política de Privacidad para más detalles.</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="privacy_policy">Política de Privacidad</string>
    <string name="btncalorias">Calorias</string>
    <string name="btnpeso">Peso Ideal</string>
    <string name="web_client_id">852657501886-knvo2ls1hs28ilar393ev4uiupd0ltvd.apps.googleusercontent.com</string>
    <string name="gender_dialog_title">Seleccione su Género</string>
    <string name="gender_male">Hombre</string>
    <string name="gender_female">Mujer</string>
    <string name="gender_selected_toast">Género guardado: %1$s</string>
    <string name="btnMapa">ver</string>
    <string name="txtLugaresFit">Lugares Fit</string>
    <string name="txtAñadirFiltro">Añadir Filtro</string>
    <string name="txtEliminarFiltro">Eliminar Filtro</string>
    <string name="lblDesafios">Misiones</string>
    <string name="lblPasosRealizados">Pasos del dia</string>
</resources>