<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id="@+id/main"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Bienvenida -->
        <TextView
            android:id="@+id/tvBienvenida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¡Bienvenido, !"
            android:textColor="#7DDC6D"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_marginBottom="24dp" />

        <!-- Botón: Pasos Diarios -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:layout_marginVertical="8dp"
            android:padding="16dp"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:clipToOutline="true"
            android:background="@drawable/rounded_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pasos Diarios"
                android:textStyle="bold"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnVerPasos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button"
                android:text="Ver"
                android:textColor="#000000" />
        </LinearLayout>

        <!-- Botón: Peso Ideal -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="8dp"
            android:padding="16dp"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/rounded_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Peso Ideal"
                android:textStyle="bold"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnCalcularPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCalcular"
                android:textColor="#000000"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/black"
                />
        </LinearLayout>

        <!-- Botón: Horas de Sueño -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="8dp"
            android:padding="16dp"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/rounded_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Horas de Sueño"
                android:textStyle="bold"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnVerSueño"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Detalles"
                android:backgroundTint="#E0FFE0"
                android:textColor="#000000"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="8dp"
            android:padding="16dp"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/rounded_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblCalorias"
                android:textStyle="bold"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btncalorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCalcular"
                android:textColor="#000000"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="8dp"
            android:padding="16dp"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/rounded_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtMapas"
                android:textStyle="bold"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnMapas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnMapa"
                android:textColor="#000000"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/black"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
