<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/lugaresFit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLugaresFit"
                android:textColor="#7DDC6D"
                android:textSize="38sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="8dp"
                android:padding="16dp"
                android:gravity="center"
                android:layout_marginHorizontal="16dp"
                android:clipToOutline="true"
                android:background="@drawable/rounded_bg"
                tools:ignore="MissingConstraints">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtAñadirFiltro"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="8dp"
                android:padding="16dp"
                android:gravity="center"
                android:layout_marginHorizontal="16dp"
                android:clipToOutline="true"
                android:background="@drawable/rounded_bg"
                tools:ignore="MissingConstraints">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtEliminarFiltro"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="550dp"
            android:orientation="vertical"
            android:layout_marginVertical="8dp"
            android:padding="16dp"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:clipToOutline="true"
            android:background="@drawable/rounded_bg"
            tools:ignore="MissingConstraints">
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="490dp"
                android:orientation="vertical"
                android:layout_marginVertical="8dp"
                android:padding="16dp"
                android:gravity="center"
                android:layout_marginHorizontal="16dp"
                android:clipToOutline="true"
                android:background="@color/blanco"
                tools:ignore="MissingConstraints">
                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <fragment
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <Spinner
                        android:id="@+id/spinnerFiltros"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_margin="16dp"
                        android:background="@android:color/white"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>